--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+body{
+	background-color : #f5f5f5;
+}
+.test1{
+	padding:10px;
+	margin:10px;
+	border:1px solid gray;
+	background-color:white;
+}
+.test2{
+	padding:10px;
+	margin:10px;
+	border:1px solid gray;
+	background-color:white;
+}
+#a{
+	text-align:right;
+	
+}
+.a
